one more adjustment on responsivity

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
         </div>
       </div>
 
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
-          <div class="col-lg col-sm timer d-flex justify-content-center align-items-center">
+          <div class="col-lg col-xs d-flex justify-content-center align-items-center timer">
             <time id="countdown"></time>
           </div>
         </div>
       </div>
 
-      <div class="container-fluid">
+      <div class="container">
         <div class="row">
           <div class="col-lg col-sm d-flex justify-content-center">
             <button type="button" class="btn btn-light col-2" id="start-timer">
