--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg col-xs d-flex justify-content-center align-items-center timer">
+          <div class="col-lg col-md d-flex justify-content-center align-items-center timer">
             <time id="countdown"></time>
           </div>
         </div>
